# CGRenderEngine

./: CMakeLists.txt
Assets/environments/: README.txt
Editor/: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Assets/: AssetCache.h  CMakeLists.txt  EnvironmentLighting.cpp  EnvironmentLighting.h  GLTFLoader.cpp  GLTFLoader.h  ResourceManager.cpp  ResourceManager.h
Engine/Core/: AssetPaths.cpp  AssetPaths.h  CMakeLists.txt  JobSystem.cpp  JobSystem.h
Engine/Platform/: CMakeLists.txt  Window.cpp  Window.h
Engine/RHI/: CMakeLists.txt  Framebuffer.cpp  IndexBuffer.cpp  Mesh.cpp  Mesh.h  RenderBufferTypes.h  Shader.cpp  ShaderBuffer.cpp  ShaderBuffer.h  ShaderBufferManager.cpp  ShaderBufferManager.h  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h
Engine/Renderer/: BloomPass.cpp  BloomPass.h  CMakeLists.txt  CompositePass.cpp  CompositePass.h  MaterialBinder.cpp  MaterialBinder.h  RayTracer.cpp  RayTracer.h  RenderGraph.cpp  RenderGraph.h  RenderSettings.h  RenderSubmission.cpp  RenderSubmission.h  RenderWorld.cpp  RenderWorld.h  Renderer.cpp  Renderer.h  ScenePass.cpp  ScenePass.h  ShadowPass.cpp  ShadowPass.h
Engine/Runtime/: Application.cpp  Application.h  CMakeLists.txt
Engine/Scene/: CMakeLists.txt  Camera.cpp  Material.cpp  Material.h  Scene.cpp  Scene.h  Transform.cpp
Sandbox/: CMakeLists.txt  main.cpp
Shaders/: basic.vert  blur.frag  composite.frag  pbr.frag  pbr.vert  shadow.frag  shadow.vert  sky.vert
Tools/: CMakeLists.txt
docs/: ARCHITECTURE.md
shaders/: basic.frag  blur.frag  composite.frag  fullscreen.vert  pbr.frag  pbr.vert  shadow.vert  sky.frag
src/: main.cpp
src/Assets/: AssetCache.h  GLTFLoader.cpp  GLTFLoader.h  ResourceManager.cpp  ResourceManager.h
src/Core/: Application.cpp  Application.h  Window.cpp  Window.h
src/Renderer/: BloomPass.cpp  BloomPass.h  CompositePass.cpp  CompositePass.h  EnvironmentLighting.cpp  EnvironmentLighting.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  MaterialBinder.cpp  MaterialBinder.h  Mesh.cpp  Mesh.h  RayTracer.cpp  RayTracer.h  RenderBufferTypes.h  RenderGraph.cpp  RenderGraph.h  RenderSettings.h  RenderSubmission.cpp  RenderSubmission.h  Renderer.cpp  Renderer.h  ScenePass.cpp  ScenePass.h  Shader.cpp  Shader.h  ShaderBuffer.cpp  ShaderBuffer.h  ShaderBufferManager.cpp  ShaderBufferManager.h  ShadowPass.cpp  ShadowPass.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Scene/: Camera.cpp  Camera.h  Environment.h  Light.h  Material.cpp  Material.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
